--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,7 @@
    
     Contributors:
         IBM Corporation - initial API and implementation
- -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+ --><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.ibm.jpaormviewer</groupId>
@@ -24,6 +23,7 @@
   <modules>
     <module>jpa-orm-xml-parser</module>
     <module>jpa-orm-ano-parser</module>
+    <module>jpa-persistence-unit-scanner</module>
   </modules>
 
   <properties>
