--- a/ormscanner/settings.gradle
+++ b/ormscanner/settings.gradle
@@ -6,3 +6,4 @@ include 'com.ibm.ws.jpaormscanner.xml_parsers.jpa_orm'
 include 'com.ibm.ws.jpaormscanner.xml_parsers.jpa_pu'
 include 'com.ibm.ws.jpaormscanner.puscanner'
 include 'com.ibm.ws.jpaormscanner.utils'
+include 'com.ibm.ws.jpaormscanner.tools.app_scanner'
