--- a/ormscanner/com.ibm.ws.jpaormscanner.tools.app_scanner/build.gradle
+++ b/ormscanner/com.ibm.ws.jpaormscanner.tools.app_scanner/build.gradle
@@ -1,3 +1,8 @@
+apply plugin: 'application'
+mainClassName = "com.ibm.ws.jpaormscanner.tools.app_scanner.JPAAppScanner"
+jar.baseName = 'JPAAppScanner'
+applicationName = 'JPAAppScanner'
+
 dependencies {
     compile project(':com.ibm.ws.jpaormscanner.app_scanner')
 	compile project(':com.ibm.ws.jpaormscanner.class_scanner')
