--- a/test/jee7-simple-application/testapp-jee7-simple-app/build.gradle
+++ b/test/jee7-simple-application/testapp-jee7-simple-app/build.gradle
@@ -3,5 +3,8 @@ apply plugin: 'ear'
 repositories { mavenCentral() }
 
 dependencies {
+    compile 'javax.persistence:javax.persistence-api:2.2'
+    compile 'javax.servlet:javax.servlet-api:4.0.0'
+    compile 'javax.transaction:javax.transaction-api:1.2'
 	deploy project(path: ':jee7-simple-application:testapp-jee7-simple-webapp', configuration: 'archives')
 }
