Initial drop of app report reader project, refactored code to a common tools project.
Signed-off-by: Joe Grassel <jgrassel@us.ibm.com>

--- a/ormscanner/com.ibm.ws.jpaormscanner.tools.app_reader/build.gradle
+++ b/ormscanner/com.ibm.ws.jpaormscanner.tools.app_reader/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'application'
-mainClassName = "com.ibm.ws.jpaormscanner.tools.app_scanner.JPAAppScanner"
-jar.baseName = 'JPAAppScanner'
-applicationName = 'JPAAppScanner'
+mainClassName = "com.ibm.ws.jpaormscanner.tools.app_reader.JPAAppReader"
+jar.baseName = 'JPAAppReader'
+applicationName = 'JPAAppReader'
 
 dependencies {
     compile project(':com.ibm.ws.jpaormscanner.app_scanner')
@@ -10,5 +10,5 @@ dependencies {
 	compile project(':com.ibm.ws.jpaormscanner.xml_parsers.jpa_pu')
 	compile project(':com.ibm.ws.jpaormscanner.puscanner')
 	compile project(':com.ibm.ws.jpaormscanner.utils')
-	compile project(':com.ibm.ws.jpaormscanner.tools.common')
+	compile project(':com.ibm.ws.jpaormscanner.tools.app_scanner')
 }
