Rename scanner tools from ws to websphere in package name to denote them as user tools rather than source components.
Signed-off-by: Joe Grassel <jgrassel@us.ibm.com>

--- a/ormscanner/com.ibm.websphere.jpaormscanner.tools.app_reader/build.gradle
+++ b/ormscanner/com.ibm.websphere.jpaormscanner.tools.app_reader/build.gradle
@@ -4,11 +4,11 @@ jar.baseName = 'JPAAppReader'
 applicationName = 'JPAAppReader'
 
 dependencies {
-    compile project(':com.ibm.ws.jpaormscanner.app_scanner')
+        compile project(':com.ibm.ws.jpaormscanner.app_scanner')
 	compile project(':com.ibm.ws.jpaormscanner.class_scanner')
 	compile project(':com.ibm.ws.jpaormscanner.xml_parsers.jpa_orm')
 	compile project(':com.ibm.ws.jpaormscanner.xml_parsers.jpa_pu')
 	compile project(':com.ibm.ws.jpaormscanner.puscanner')
 	compile project(':com.ibm.ws.jpaormscanner.utils')
-	compile project(':com.ibm.ws.jpaormscanner.tools.app_scanner')
+	compile project(':com.ibm.websphere.jpaormscanner.tools.app_scanner')
 }
