--- a/ormscanner/settings.gradle
+++ b/ormscanner/settings.gradle
@@ -7,5 +7,5 @@ include 'com.ibm.ws.jpaormscanner.xml_parsers.jpa_pu'
 include 'com.ibm.ws.jpaormscanner.puscanner'
 include 'com.ibm.ws.jpaormscanner.utils'
 include 'com.ibm.ws.jpaormscanner.tools.common'
-include 'com.ibm.ws.jpaormscanner.tools.app_scanner'
-include 'com.ibm.ws.jpaormscanner.tools.app_reader'
+include 'com.ibm.websphere.jpaormscanner.tools.app_scanner'
+include 'com.ibm.websphere.jpaormscanner.tools.app_reader'
