Rename tools util project to websphere name as well.
Signed-off-by: Joe Grassel <jgrassel@us.ibm.com>

--- a/ormscanner/com.ibm.websphere.jpaormscanner.tools.app_scanner/build.gradle
+++ b/ormscanner/com.ibm.websphere.jpaormscanner.tools.app_scanner/build.gradle
@@ -10,5 +10,5 @@ dependencies {
 	compile project(':com.ibm.ws.jpaormscanner.xml_parsers.jpa_pu')
 	compile project(':com.ibm.ws.jpaormscanner.puscanner')
 	compile project(':com.ibm.ws.jpaormscanner.utils')
-	compile project(':com.ibm.ws.jpaormscanner.tools.common')
+	compile project(':com.ibm.websphere.jpaormscanner.tools.common')
 }
