Initial drop of WAS JPA ORM Diagnostic Log Reader
Signed-off-by: Joe Grassel <jgrassel@us.ibm.com>

--- a/ormscanner/settings.gradle
+++ b/ormscanner/settings.gradle
@@ -9,3 +9,4 @@ include 'com.ibm.ws.jpaormscanner.utils'
 include 'com.ibm.websphere.jpaormscanner.tools.common'
 include 'com.ibm.websphere.jpaormscanner.tools.app_scanner'
 include 'com.ibm.websphere.jpaormscanner.tools.app_reader'
+include 'com.ibm.websphere.jpaormscanner.tools.was_reader'
