Fix was_reader build.gradle file to point to correct application class.

--- a/ormscanner/com.ibm.websphere.jpaormscanner.tools.was_reader/build.gradle
+++ b/ormscanner/com.ibm.websphere.jpaormscanner.tools.was_reader/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'application'
-mainClassName = "com.ibm.ws.jpaormscanner.tools.was_reader.WASJPAAppReader"
+mainClassName = "com.ibm.ws.jpaormscanner.tools.was_reader.WASReader"
 jar.baseName = 'WASJPAReader'
 applicationName = 'WASJPAReader'
 
